Ajout de services.jsx

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Dépannage rapide et professionnel en électricité, chauffage, et serrurerie. Disponible 24/7. Contactez-nous pour une intervention immédiate." />
     <meta name="keywords" content="dépannage, électricité, chauffage, serrurerie, urgence, 24/7, intervention rapide, service local" />
     <meta name="author" content="Dépanne moi" />
+
+    <meta name="google-site-verification" content="Ltdf3fYP-c2xnbJsBmXyUWYXW8TwcWpIHL4R5t1dA68" />
     
     <!-- Open Graph -->
     <meta property="og:title" content="Dépannage Électricité, Chauffage et Serrurerie - Service 24/7" />
