--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,8 @@
     <!-- Preconnect and Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     
     <!-- Favicon and Manifest -->
     <link rel="icon" href="%PUBLIC_URL%/Assets/logo-ud.png" type="image/png" />
