--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,28 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.serviceurgencedepannage.fr" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "UrgenceDepan",
+        "image": "https://servicesurgencedepannage.com/logo.jpg", 
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "10 Rue Claude Debussy",
+          "addressLocality": "Paris",
+          "addressRegion": "Île-de-France",
+          "postalCode": "75017",
+          "addressCountry": "FR"
+        },
+        "telephone": "+33 7 81 03 48 36",
+        "url": "https://servicesurgencedepannage.com/",
+        "openingHours": "Mo-Su 00:00-23:59",
+        "description": "UrgenceDepan - Spécialistes en dépannage électricité, plomberie, chauffage, et serrurerie à Paris. Intervention rapide 24h/24, 7j/7.",
+        "priceRange": "$$"
+      }
+      </script>
+      
 
     <!-- Preconnect and Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
