mise à jour des liens

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
     <meta name="google-site-verification" content="Ltdf3fYP-c2xnbJsBmXyUWYXW8TwcWpIHL4R5t1dA68" />
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://servicesurgencedepannage.com/" />
     <!-- Open Graph -->
     <meta property="og:title" content="Dépannage Électricité, Chauffage et Serrurerie - Service 24/7" />
     <meta property="og:description" content="Nous offrons des services de dépannage rapide et professionnel en électricité, chauffage, et serrurerie. Contactez-nous pour une intervention immédiate." />
